Bug:  615301 Reviewer:  Self Comments:  Made the sidebar tree overflow-y:auto so that it gets its own scrollbar, as needed.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/GwtMainPage.java
M    gwt/src/org/kablink/teaming/gwt/client/widgets/WorkspaceTreeControl.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -362,7 +362,7 @@ body, table td, select
 	width: 230px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
-	overflow-x: auto;
+	overflow: auto;
 }
 .workspaceTreeControlBody
 {
